--- a/RBMR/DESCRIPTION
+++ b/RBMR/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Anqi Wang
 Maintainer: The package maintainer <yourself@somewhere.net>
 Depends: R (>= 3.1.0)
-Description: Inference the causality based on RBMR method
+Description: Infer the causality based on RBMR method.
 License: GPL
 Encoding: UTF-8
 LazyData: true
